hphp/hack/test/typecheck/named_parameters/variadic_fn_types/named_params_variadic_fn_types_subtyping.php.exp
ERROR: File "named_params_variadic_fn_types_subtyping.php", line 62, characters 13-20:
Invalid argument (Typing[4040])
  File "named_params_variadic_fn_types_subtyping.php", line 60, characters 10-15:
  Missing required named parameter: ...
  File "named_params_variadic_fn_types_subtyping.php", line 59, characters 20-49:
  Because of this definition
ERROR: File "named_params_variadic_fn_types_subtyping.php", line 62, characters 13-20:
Invalid argument (Typing[4041])
  File "named_params_variadic_fn_types_subtyping.php", line 60, characters 10-15:
  Unexpected named parameter: x
  File "named_params_variadic_fn_types_subtyping.php", line 59, characters 20-49:
  Because of this definition
ERROR: File "named_params_variadic_fn_types_subtyping.php", line 71, characters 13-20:
Invalid argument (Typing[4110])
  File "named_params_variadic_fn_types_subtyping.php", line 69, characters 33-35:
  Expected `string` (variadic argument)
  File "named_params_variadic_fn_types_subtyping.php", line 68, characters 36-38:
  But got `int`
ERROR: File "named_params_variadic_fn_types_subtyping.php", line 80, characters 13-20:
Invalid argument (Typing[4110])
  File "named_params_variadic_fn_types_subtyping.php", line 78, characters 33-35:
  Expected `string` (variadic argument)
  File "named_params_variadic_fn_types_subtyping.php", line 77, characters 36-38:
  But got `int`
